--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8' />
-<title>Add an animated icon to the map</title>
+<title>Display buildings in 3D</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -14,90 +14,58 @@ body { margin:0; padding:0; }
 <body>
  
 <div id='map'></div>
- 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
- 
 var map = new mapboxgl.Map({
+style: 'mapbox://styles/mapbox/light-v10',
+center: [-74.0066, 40.7135],
+zoom: 15.5,
+pitch: 45,
+bearing: -17.6,
 container: 'map',
-style: 'mapbox://styles/mapbox/streets-v9'
+antialias: true
 });
  
-var size = 200;
+// The 'building' layer in the mapbox-streets vector source contains building-height
+// data from OpenStreetMap.
+map.on('load', function() {
+// Insert the layer beneath any symbol layer.
+var layers = map.getStyle().layers;
  
-var pulsingDot = {
-width: size,
-height: size,
-data: new Uint8Array(size * size * 4),
- 
-onAdd: function() {
-var canvas = document.createElement('canvas');
-canvas.width = this.width;
-canvas.height = this.height;
-this.context = canvas.getContext('2d');
-},
- 
-render: function() {
-var duration = 1000;
-var t = (performance.now() % duration) / duration;
- 
-var radius = size / 2 * 0.3;
-var outerRadius = size / 2 * 0.7 * t + radius;
-var context = this.context;
- 
-// draw outer circle
-context.clearRect(0, 0, this.width, this.height);
-context.beginPath();
-context.arc(this.width / 2, this.height / 2, outerRadius, 0, Math.PI * 2);
-context.fillStyle = 'rgba(255, 200, 200,' + (1 - t) + ')';
-context.fill();
- 
-// draw inner circle
-context.beginPath();
-context.arc(this.width / 2, this.height / 2, radius, 0, Math.PI * 2);
-context.fillStyle = 'rgba(255, 100, 100, 1)';
-context.strokeStyle = 'white';
-context.lineWidth = 2 + 4 * (1 - t);
-context.fill();
-context.stroke();
- 
-// update this image's data with data from the canvas
-this.data = context.getImageData(0, 0, this.width, this.height).data;
- 
-// keep the map repainting
-map.triggerRepaint();
- 
-// return `true` to let the map know that the image was updated
-return true;
+var labelLayerId;
+for (var i = 0; i < layers.length; i++) {
+if (layers[i].type === 'symbol' && layers[i].layout['text-field']) {
+labelLayerId = layers[i].id;
+break;
 }
-};
- 
-map.on('load', function () {
- 
-map.addImage('pulsing-dot', pulsingDot, { pixelRatio: 2 });
+}
  
 map.addLayer({
-"id": "points",
-"type": "symbol",
-"source": {
-"type": "geojson",
-"data": {
-"type": "FeatureCollection",
-"features": [{
-"type": "Feature",
-"geometry": {
-"type": "Point",
-"coordinates": [0, 0]
-}
-}]
-}
-},
-"layout": {
-"icon-image": "pulsing-dot"
-}
-});
-});
+'id': '3d-buildings',
+'source': 'composite',
+'source-layer': 'building',
+'filter': ['==', 'extrude', 'true'],
+'type': 'fill-extrusion',
+'minzoom': 15,
+'paint': {
+'fill-extrusion-color': '#aaa',
  
+// use an 'interpolate' expression to add a smooth transition effect to the
+// buildings as the user zooms in
+'fill-extrusion-height': [
+"interpolate", ["linear"], ["zoom"],
+15, 0,
+15.05, ["get", "height"]
+],
+'fill-extrusion-base': [
+"interpolate", ["linear"], ["zoom"],
+15, 0,
+15.05, ["get", "min_height"]
+],
+'fill-extrusion-opacity': .6
+}
+}, labelLayerId);
+});
 </script>
  
 </body>
