--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8' />
-<title>Create a draggable Marker</title>
+<title>Display buildings in 3D</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -13,49 +13,59 @@ body { margin:0; padding:0; }
 </head>
 <body>
  
- 
-<style>
-.coordinates {
-background: rgba(0,0,0,0.5);
-color: #fff;
-position: absolute;
-bottom: 40px;
-left: 10px;
-padding:5px 10px;
-margin: 0;
-font-size: 11px;
-line-height: 18px;
-border-radius: 3px;
-display: none;
-}
-</style>
- 
 <div id='map'></div>
-<pre id='coordinates' class='coordinates'></pre>
- 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
-var coordinates = document.getElementById('coordinates');
 var map = new mapboxgl.Map({
+style: 'mapbox://styles/mapbox/light-v10',
+center: [-74.0066, 40.7135],
+zoom: 15.5,
+pitch: 45,
+bearing: -17.6,
 container: 'map',
-style: 'mapbox://styles/mapbox/streets-v11',
-center: [0, 0],
-zoom: 2
+antialias: true
 });
  
-var marker = new mapboxgl.Marker({
-draggable: true
-})
-.setLngLat([0, 0])
-.addTo(map);
+// The 'building' layer in the mapbox-streets vector source contains building-height
+// data from OpenStreetMap.
+map.on('load', function() {
+// Insert the layer beneath any symbol layer.
+var layers = map.getStyle().layers;
  
-function onDragEnd() {
-var lngLat = marker.getLngLat();
-coordinates.style.display = 'block';
-coordinates.innerHTML = 'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
+var labelLayerId;
+for (var i = 0; i < layers.length; i++) {
+if (layers[i].type === 'symbol' && layers[i].layout['text-field']) {
+labelLayerId = layers[i].id;
+break;
+}
 }
  
-marker.on('dragend', onDragEnd);
+map.addLayer({
+'id': '3d-buildings',
+'source': 'composite',
+'source-layer': 'building',
+'filter': ['==', 'extrude', 'true'],
+'type': 'fill-extrusion',
+'minzoom': 15,
+'paint': {
+'fill-extrusion-color': '#aaa',
+ 
+// use an 'interpolate' expression to add a smooth transition effect to the
+// buildings as the user zooms in
+'fill-extrusion-height': [
+"interpolate", ["linear"], ["zoom"],
+15, 0,
+15.05, ["get", "height"]
+],
+'fill-extrusion-base': [
+"interpolate", ["linear"], ["zoom"],
+15, 0,
+15.05, ["get", "min_height"]
+],
+'fill-extrusion-opacity': .6
+}
+}, labelLayerId);
+});
 </script>
  
 </body>
