--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@ map.addLayer({
 }
 }, labelLayerId);
 });
+ 
+ var marker = new mapboxgl.Marker({
+draggable: true
+})
+.setLngLat([0, 0])
+.addTo(map);
+ 
+function onDragEnd() {
+var lngLat = marker.getLngLat();
+coordinates.style.display = 'block';
+coordinates.innerHTML = 'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
+}
+ 
+marker.on('dragend', onDragEnd);
 </script>
  
 </body>
