--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset='utf-8' />
-<title>Display buildings in 3D</title>
+<title>Highlight features containing similar data</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -13,74 +14,121 @@ body { margin:0; padding:0; }
 </head>
 <body>
  
+<style>
+.map-overlay {
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+background-color: #fff;
+box-shadow: 0 1px 2px rgba(0,0,0,0.10);
+border-radius: 3px;
+position: absolute;
+width: 25%;
+top: 10px;
+left: 10px;
+padding: 10px;
+display: none;
+}
+</style>
+ 
 <div id='map'></div>
- <pre id='coordinates' class='coordinates'></pre>
+<div id='map-overlay' class='map-overlay'></div>
+ 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
 var map = new mapboxgl.Map({
-style: 'mapbox://styles/mapbox/light-v10',
-center: [-74.0066, 40.7135],
-zoom: 15.5,
-pitch: 45,
-bearing: -17.6,
 container: 'map',
-antialias: true
+style: 'mapbox://styles/mapbox/streets-v11',
+center: [-98, 38.88],
+minZoom: 2,
+zoom: 3
 });
  
-// The 'building' layer in the mapbox-streets vector source contains building-height
-// data from OpenStreetMap.
-map.on('load', function() {
-// Insert the layer beneath any symbol layer.
-var layers = map.getStyle().layers;
+var overlay = document.getElementById('map-overlay');
  
-var labelLayerId;
-for (var i = 0; i < layers.length; i++) {
-if (layers[i].type === 'symbol' && layers[i].layout['text-field']) {
-labelLayerId = layers[i].id;
-break;
-}
-}
+// Create a popup, but don't add it to the map yet.
+var popup = new mapboxgl.Popup({
+closeButton: false
+});
+ 
+map.on('load', function() {
+// Add the source to query. In this example we're using
+// county polygons uploaded as vector tiles
+map.addSource('counties', {
+"type": "vector",
+"url": "mapbox://mapbox.82pkq93d"
+});
  
 map.addLayer({
-'id': '3d-buildings',
-'source': 'composite',
-'source-layer': 'building',
-'filter': ['==', 'extrude', 'true'],
-'type': 'fill-extrusion',
-'minzoom': 15,
-'paint': {
-'fill-extrusion-color': '#aaa',
- 
-// use an 'interpolate' expression to add a smooth transition effect to the
-// buildings as the user zooms in
-'fill-extrusion-height': [
-"interpolate", ["linear"], ["zoom"],
-15, 0,
-15.05, ["get", "height"]
-],
-'fill-extrusion-base': [
-"interpolate", ["linear"], ["zoom"],
-15, 0,
-15.05, ["get", "min_height"]
-],
-'fill-extrusion-opacity': .6
+"id": "counties",
+"type": "fill",
+"source": "counties",
+"source-layer": "original",
+"paint": {
+"fill-outline-color": "rgba(0,0,0,0.1)",
+"fill-color": "rgba(0,0,0,0.1)"
 }
-}, labelLayerId);
+}, 'settlement-label'); // Place polygon under these labels.
+ 
+map.addLayer({
+"id": "counties-highlighted",
+"type": "fill",
+"source": "counties",
+"source-layer": "original",
+"paint": {
+"fill-outline-color": "#484896",
+"fill-color": "#6e599f",
+"fill-opacity": 0.75
+},
+"filter": ["in", "COUNTY", ""]
+}, 'settlement-label'); // Place polygon under these labels.
+ 
+map.on('mousemove', 'counties', function(e) {
+// Change the cursor style as a UI indicator.
+map.getCanvas().style.cursor = 'pointer';
+ 
+// Single out the first found feature.
+var feature = e.features[0];
+ 
+// Query the counties layer visible in the map. Use the filter
+// param to only collect results that share the same county name.
+var relatedFeatures = map.querySourceFeatures('counties', {
+sourceLayer: 'original',
+filter: ['in', 'COUNTY', feature.properties.COUNTY]
 });
- var coordinates = document.getElementById('coordinates');
- var marker = new mapboxgl.Marker({
-draggable: true
-})
-.setLngLat([0, 0])
+ 
+// Render found features in an overlay.
+overlay.innerHTML = '';
+ 
+// Total the population of all features
+var populationSum = relatedFeatures.reduce(function(memo, feature) {
+return memo + feature.properties.population;
+}, 0);
+ 
+var title = document.createElement('strong');
+title.textContent = feature.properties.COUNTY + ' (' + relatedFeatures.length + ' found)';
+ 
+var population = document.createElement('div');
+population.textContent = 'Total population: ' + populationSum.toLocaleString();
+ 
+overlay.appendChild(title);
+overlay.appendChild(population);
+overlay.style.display = 'block';
+ 
+// Add features that share the same county name to the highlighted layer.
+map.setFilter('counties-highlighted', ['in', 'COUNTY', feature.properties.COUNTY]);
+ 
+// Display a popup with the name of the county
+popup.setLngLat(e.lngLat)
+.setText(feature.properties.COUNTY)
 .addTo(map);
+});
  
-function onDragEnd() {
-var lngLat = marker.getLngLat();
-coordinates.style.display = 'block';
-coordinates.innerHTML = 'Longitude: ' + lngLat.lng + '<br />Latitude: ' + lngLat.lat;
-}
- 
-marker.on('dragend', onDragEnd);
+map.on('mouseleave', 'counties', function() {
+map.getCanvas().style.cursor = '';
+popup.remove();
+map.setFilter('counties-highlighted', ['in', 'COUNTY', '']);
+overlay.style.display = 'none';
+});
+});
 </script>
  
 </body>
