--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset='utf-8' />
-<title>Highlight features containing similar data</title>
+<title>Show drawn polygon area</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -15,120 +14,69 @@ body { margin:0; padding:0; }
 <body>
  
 <style>
-.map-overlay {
-font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-background-color: #fff;
-box-shadow: 0 1px 2px rgba(0,0,0,0.10);
-border-radius: 3px;
+.calculation-box {
+height: 75px;
+width: 150px;
 position: absolute;
-width: 25%;
-top: 10px;
+bottom: 40px;
 left: 10px;
-padding: 10px;
-display: none;
+background-color: rgba(255, 255, 255, .9);
+padding: 15px;
+text-align: center;
+}
+ 
+p {
+font-family: 'Open Sans';
+margin: 0;
+font-size: 13px;
 }
 </style>
  
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js'></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
+<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css' type='text/css'/>
 <div id='map'></div>
-<div id='map-overlay' class='map-overlay'></div>
+<div class='calculation-box'>
+<p>Draw a polygon using the draw tools.</p>
+<div id='calculated-area'></div>
+</div>
  
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
 var map = new mapboxgl.Map({
-container: 'map',
-style: 'mapbox://styles/mapbox/streets-v11',
-center: [-98, 38.88],
-minZoom: 2,
-zoom: 3
+container: 'map', // container id
+style: 'mapbox://styles/mapbox/satellite-v9', //hosted style id
+center: [-91.874, 42.760], // starting position
+zoom: 12 // starting zoom
 });
  
-var overlay = document.getElementById('map-overlay');
- 
-// Create a popup, but don't add it to the map yet.
-var popup = new mapboxgl.Popup({
-closeButton: false
-});
- 
-map.on('load', function() {
-// Add the source to query. In this example we're using
-// county polygons uploaded as vector tiles
-map.addSource('counties', {
-"type": "vector",
-"url": "mapbox://mapbox.82pkq93d"
-});
- 
-map.addLayer({
-"id": "counties",
-"type": "fill",
-"source": "counties",
-"source-layer": "original",
-"paint": {
-"fill-outline-color": "rgba(0,0,0,0.1)",
-"fill-color": "rgba(0,0,0,0.1)"
+var draw = new MapboxDraw({
+displayControlsDefault: false,
+controls: {
+polygon: true,
+trash: true
 }
-}, 'settlement-label'); // Place polygon under these labels.
- 
-map.addLayer({
-"id": "counties-highlighted",
-"type": "fill",
-"source": "counties",
-"source-layer": "original",
-"paint": {
-"fill-outline-color": "#484896",
-"fill-color": "#6e599f",
-"fill-opacity": 0.75
-},
-"filter": ["in", "COUNTY", ""]
-}, 'settlement-label'); // Place polygon under these labels.
- 
-map.on('mousemove', 'counties', function(e) {
-// Change the cursor style as a UI indicator.
-map.getCanvas().style.cursor = 'pointer';
- 
-// Single out the first found feature.
-var feature = e.features[0];
- 
-// Query the counties layer visible in the map. Use the filter
-// param to only collect results that share the same county name.
-var relatedFeatures = map.querySourceFeatures('counties', {
-sourceLayer: 'original',
-filter: ['in', 'COUNTY', feature.properties.COUNTY]
 });
+map.addControl(draw);
  
-// Render found features in an overlay.
-overlay.innerHTML = '';
+map.on('draw.create', updateArea);
+map.on('draw.delete', updateArea);
+map.on('draw.update', updateArea);
  
-// Total the population of all features
-var populationSum = relatedFeatures.reduce(function(memo, feature) {
-return memo + feature.properties.population;
-}, 0);
+function updateArea(e) {
+var data = draw.getAll();
+var answer = document.getElementById('calculated-area');
+if (data.features.length > 0) {
+var area = turf.area(data);
+// restrict to area to 2 decimal points
+var rounded_area = Math.round(area*100)/100;
+answer.innerHTML = '<p><strong>' + rounded_area + '</strong></p><p>square meters</p>';
+} else {
+answer.innerHTML = '';
+if (e.type !== 'draw.delete') alert("Use the draw tools to draw a polygon!");
+}
+}
  
-var title = document.createElement('strong');
-title.textContent = feature.properties.COUNTY + ' (' + relatedFeatures.length + ' found)';
- 
-var population = document.createElement('div');
-population.textContent = 'Total population: ' + populationSum.toLocaleString();
- 
-overlay.appendChild(title);
-overlay.appendChild(population);
-overlay.style.display = 'block';
- 
-// Add features that share the same county name to the highlighted layer.
-map.setFilter('counties-highlighted', ['in', 'COUNTY', feature.properties.COUNTY]);
- 
-// Display a popup with the name of the county
-popup.setLngLat(e.lngLat)
-.setText(feature.properties.COUNTY)
-.addTo(map);
-});
- 
-map.on('mouseleave', 'counties', function() {
-map.getCanvas().style.cursor = '';
-popup.remove();
-map.setFilter('counties-highlighted', ['in', 'COUNTY', '']);
-overlay.style.display = 'none';
-});
-});
 </script>
  
 </body>
