--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset='utf-8' />
-<title>Show drawn polygon area</title>
+<title>Fit to the bounds of a LineString</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
@@ -14,69 +15,102 @@ body { margin:0; padding:0; }
 <body>
  
 <style>
-.calculation-box {
-height: 75px;
-width: 150px;
+.btn-control {
+font:bold 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+background-color: #3386c0;
+color: #fff;
 position: absolute;
-bottom: 40px;
-left: 10px;
-background-color: rgba(255, 255, 255, .9);
-padding: 15px;
-text-align: center;
+top: 20px;
+left: 50%;
+z-index: 1;
+border: none;
+width: 200px;
+margin-left:-100px;
+display: block;
+cursor: pointer;
+padding: 10px 20px;
+border-radius: 3px;
 }
  
-p {
-font-family: 'Open Sans';
-margin: 0;
-font-size: 13px;
+.btn-control:hover {
+background-color: #4ea0da;
 }
 </style>
- 
-<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js'></script>
-<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
-<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css' type='text/css'/>
 <div id='map'></div>
-<div class='calculation-box'>
-<p>Draw a polygon using the draw tools.</p>
-<div id='calculated-area'></div>
-</div>
+<button id='zoomto' class='btn-control'>Zoom to bounds</nav>
  
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
+// A GeoJSON object with a LineString route from the White House to Capitol Hill
+var geojson = {
+"type": "FeatureCollection",
+"features": [{
+"type": "Feature",
+"geometry": {
+"type": "LineString",
+"properties": {},
+"coordinates": [
+[-77.0366048812866, 38.89873175227713],
+[-77.03364372253417, 38.89876515143842],
+[-77.03364372253417, 38.89549195896866],
+[-77.02982425689697, 38.89549195896866],
+[-77.02400922775269, 38.89387200688839],
+[-77.01519012451172, 38.891416957534204],
+[-77.01521158218382, 38.892068305429156],
+[-77.00813055038452, 38.892051604275686],
+[-77.00832366943358, 38.89143365883688],
+[-77.00818419456482, 38.89082405874451],
+[-77.00815200805664, 38.88989712255097]
+]
+}
+}]
+};
+ 
 var map = new mapboxgl.Map({
-container: 'map', // container id
-style: 'mapbox://styles/mapbox/satellite-v9', //hosted style id
-center: [-91.874, 42.760], // starting position
-zoom: 12 // starting zoom
+container: 'map',
+style: 'mapbox://styles/mapbox/light-v10',
+center: [-77.0214, 38.8970],
+zoom: 12
 });
  
-var draw = new MapboxDraw({
-displayControlsDefault: false,
-controls: {
-polygon: true,
-trash: true
+map.on('load', function() {
+ 
+map.addLayer({
+"id": "LineString",
+"type": "line",
+"source": {
+"type": "geojson",
+"data": geojson
+},
+"layout": {
+"line-join": "round",
+"line-cap": "round"
+},
+"paint": {
+"line-color": "#BF93E4",
+"line-width": 5
 }
 });
-map.addControl(draw);
  
-map.on('draw.create', updateArea);
-map.on('draw.delete', updateArea);
-map.on('draw.update', updateArea);
+document.getElementById('zoomto').addEventListener('click', function() {
  
-function updateArea(e) {
-var data = draw.getAll();
-var answer = document.getElementById('calculated-area');
-if (data.features.length > 0) {
-var area = turf.area(data);
-// restrict to area to 2 decimal points
-var rounded_area = Math.round(area*100)/100;
-answer.innerHTML = '<p><strong>' + rounded_area + '</strong></p><p>square meters</p>';
-} else {
-answer.innerHTML = '';
-if (e.type !== 'draw.delete') alert("Use the draw tools to draw a polygon!");
-}
-}
+// Geographic coordinates of the LineString
+var coordinates = geojson.features[0].geometry.coordinates;
  
+// Pass the first coordinates in the LineString to `lngLatBounds` &
+// wrap each coordinate pair in `extend` to include them in the bounds
+// result. A variation of this technique could be applied to zooming
+// to the bounds of multiple Points or Polygon geomteries - it just
+// requires wrapping all the coordinates with the extend method.
+var bounds = coordinates.reduce(function(bounds, coord) {
+return bounds.extend(coord);
+}, new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
+ 
+map.fitBounds(bounds, {
+padding: 20
+});
+});
+});
 </script>
  
 </body>
