--- a/index.html
+++ b/index.html
@@ -1,117 +1,207 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='utf-8' />
-<title>Fit to the bounds of a LineString</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
-<style>
-body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
+    <meta charset='utf-8' />
+    <title>Display buildings in 3D</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.3.1/mapbox-gl.css' rel='stylesheet' />
+    <style>
+        body { margin:0; padding:0; }
+        #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
 </head>
 <body>
- 
-<style>
-.btn-control {
-font:bold 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-background-color: #3386c0;
-color: #fff;
-position: absolute;
-top: 20px;
-left: 50%;
-z-index: 1;
-border: none;
-width: 200px;
-margin-left:-100px;
-display: block;
-cursor: pointer;
-padding: 10px 20px;
-border-radius: 3px;
-}
- 
-.btn-control:hover {
-background-color: #4ea0da;
-}
-</style>
+
 <div id='map'></div>
-<button id='zoomto' class='btn-control'>Zoom to bounds</nav>
- 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
-// A GeoJSON object with a LineString route from the White House to Capitol Hill
-var geojson = {
+var map = new mapboxgl.Map({
+    style: 'mapbox://styles/mapbox/light-v10',
+    center: [-74.0066, 40.7135],
+    zoom: 15.5,
+    pitch: 45,
+    bearing: -17.6,
+    container: 'map',
+    antialias: true
+});
+
+ 
+ map.on('click', 'places', function (e) {
+var coordinates = e.features[0].geometry.coordinates.slice();
+var description = e.features[0].properties.description;
+ 
+// Ensure that if the map is zoomed out such that multiple
+// copies of the feature are visible, the popup appears
+// over the copy being pointed to.
+while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
+coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
+}
+ 
+new mapboxgl.Popup()
+.setLngLat(coordinates)
+.setHTML(description)
+.addTo(map);
+});
+ // Change the cursor to a pointer when the mouse is over the places layer.
+map.on('mouseenter', 'places', function () {
+map.getCanvas().style.cursor = 'pointer';
+});
+ 
+// Change it back to a pointer when it leaves.
+map.on('mouseleave', 'places', function () {
+map.getCanvas().style.cursor = '';
+});
+ 
+// The 'building' layer in the mapbox-streets vector source contains building-height
+// data from OpenStreetMap.
+map.on('load', function() {
+    // Insert the layer beneath any symbol layer.
+    var layers = map.getStyle().layers;
+
+    var labelLayerId;
+    for (var i = 0; i < layers.length; i++) {
+        if (layers[i].type === 'symbol' && layers[i].layout['text-field']) {
+            labelLayerId = layers[i].id;
+            break;
+        }
+    }
+   
+ 
+    map.addLayer({
+"id": "places",
+"type": "symbol",
+"source": {
+"type": "geojson",
+"data": {
 "type": "FeatureCollection",
 "features": [{
 "type": "Feature",
+"properties": {
+"description": "<strong>Make it Mount Pleasant</strong><p><a href=\"http://www.mtpleasantdc.com/makeitmtpleasant\" target=\"_blank\" title=\"Opens in a new window\">Make it Mount Pleasant</a> is a handmade and vintage market and afternoon of live entertainment and kids activities. 12:00-6:00 p.m.</p>",
+"icon": "theatre"
+},
 "geometry": {
-"type": "LineString",
-"properties": {},
-"coordinates": [
-[-77.0366048812866, 38.89873175227713],
-[-77.03364372253417, 38.89876515143842],
-[-77.03364372253417, 38.89549195896866],
-[-77.02982425689697, 38.89549195896866],
-[-77.02400922775269, 38.89387200688839],
-[-77.01519012451172, 38.891416957534204],
-[-77.01521158218382, 38.892068305429156],
-[-77.00813055038452, 38.892051604275686],
-[-77.00832366943358, 38.89143365883688],
-[-77.00818419456482, 38.89082405874451],
-[-77.00815200805664, 38.88989712255097]
-]
+"type": "Point",
+"coordinates": [-77.038659, 38.931567]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Mad Men Season Five Finale Watch Party</strong><p>Head to Lounge 201 (201 Massachusetts Avenue NE) Sunday for a <a href=\"http://madmens5finale.eventbrite.com/\" target=\"_blank\" title=\"Opens in a new window\">Mad Men Season Five Finale Watch Party</a>, complete with 60s costume contest, Mad Men trivia, and retro food and drink. 8:00-11:00 p.m. $10 general admission, $20 admission and two hour open bar.</p>",
+"icon": "theatre"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.003168, 38.894651]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Big Backyard Beach Bash and Wine Fest</strong><p>EatBar (2761 Washington Boulevard Arlington VA) is throwing a <a href=\"http://tallulaeatbar.ticketleap.com/2012beachblanket/\" target=\"_blank\" title=\"Opens in a new window\">Big Backyard Beach Bash and Wine Fest</a> on Saturday, serving up conch fritters, fish tacos and crab sliders, and Red Apron hot dogs. 12:00-3:00 p.m. $25.grill hot dogs.</p>",
+"icon": "bar"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.090372, 38.881189]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Ballston Arts & Crafts Market</strong><p>The <a href=\"http://ballstonarts-craftsmarket.blogspot.com/\" target=\"_blank\" title=\"Opens in a new window\">Ballston Arts & Crafts Market</a> sets up shop next to the Ballston metro this Saturday for the first of five dates this summer. Nearly 35 artists and crafters will be on hand selling their wares. 10:00-4:00 p.m.</p>",
+"icon": "art-gallery"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.111561, 38.882342]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Seersucker Bike Ride and Social</strong><p>Feeling dandy? Get fancy, grab your bike, and take part in this year's <a href=\"http://dandiesandquaintrelles.com/2012/04/the-seersucker-social-is-set-for-june-9th-save-the-date-and-start-planning-your-look/\" target=\"_blank\" title=\"Opens in a new window\">Seersucker Social</a> bike ride from Dandies and Quaintrelles. After the ride enjoy a lawn party at Hillwood with jazz, cocktails, paper hat-making, and more. 11:00-7:00 p.m.</p>",
+"icon": "bicycle"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.052477, 38.943951]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Capital Pride Parade</strong><p>The annual <a href=\"http://www.capitalpride.org/parade\" target=\"_blank\" title=\"Opens in a new window\">Capital Pride Parade</a> makes its way through Dupont this Saturday. 4:30 p.m. Free.</p>",
+"icon": "rocket"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.043444, 38.909664]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Muhsinah</strong><p>Jazz-influenced hip hop artist <a href=\"http://www.muhsinah.com\" target=\"_blank\" title=\"Opens in a new window\">Muhsinah</a> plays the <a href=\"http://www.blackcatdc.com\">Black Cat</a> (1811 14th Street NW) tonight with <a href=\"http://www.exitclov.com\" target=\"_blank\" title=\"Opens in a new window\">Exit Clov</a> and <a href=\"http://godsilla.bandcamp.com\" target=\"_blank\" title=\"Opens in a new window\">Gods’illa</a>. 9:00 p.m. $12.</p>",
+"icon": "music"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.031706, 38.914581]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>A Little Night Music</strong><p>The Arlington Players' production of Stephen Sondheim's  <a href=\"http://www.thearlingtonplayers.org/drupal-6.20/node/4661/show\" target=\"_blank\" title=\"Opens in a new window\"><em>A Little Night Music</em></a> comes to the Kogod Cradle at The Mead Center for American Theater (1101 6th Street SW) this weekend and next. 8:00 p.m.</p>",
+"icon": "music"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.020945, 38.878241]
+}
+}, {
+"type": "Feature",
+"properties": {
+"description": "<strong>Truckeroo</strong><p><a href=\"http://www.truckeroodc.com/www/\" target=\"_blank\">Truckeroo</a> brings dozens of food trucks, live music, and games to half and M Street SE (across from Navy Yard Metro Station) today from 11:00 a.m. to 11:00 p.m.</p>",
+"icon": "music"
+},
+"geometry": {
+"type": "Point",
+"coordinates": [-77.007481, 38.876516]
 }
 }]
-};
- 
-var map = new mapboxgl.Map({
-container: 'map',
-style: 'mapbox://styles/mapbox/light-v10',
-center: [-77.0214, 38.8970],
-zoom: 12
-});
- 
-map.on('load', function() {
- 
-map.addLayer({
-"id": "LineString",
-"type": "line",
-"source": {
-"type": "geojson",
-"data": geojson
+}
 },
 "layout": {
-"line-join": "round",
-"line-cap": "round"
-},
-"paint": {
-"line-color": "#BF93E4",
-"line-width": 5
+"icon-image": "{icon}-15",
+"icon-allow-overlap": true
 }
 });
  
-document.getElementById('zoomto').addEventListener('click', function() {
  
-// Geographic coordinates of the LineString
-var coordinates = geojson.features[0].geometry.coordinates;
- 
-// Pass the first coordinates in the LineString to `lngLatBounds` &
-// wrap each coordinate pair in `extend` to include them in the bounds
-// result. A variation of this technique could be applied to zooming
-// to the bounds of multiple Points or Polygon geomteries - it just
-// requires wrapping all the coordinates with the extend method.
-var bounds = coordinates.reduce(function(bounds, coord) {
-return bounds.extend(coord);
-}, new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
- 
-map.fitBounds(bounds, {
-padding: 20
-});
-});
+    map.addLayer({
+        'id': '3d-buildings',
+        'source': 'composite',
+        'source-layer': 'building',
+        'filter': ['==', 'extrude', 'true'],
+        'type': 'fill-extrusion',
+        'minzoom': 15,
+        'paint': {
+            'fill-extrusion-color': '#aaa',
+
+            // use an 'interpolate' expression to add a smooth transition effect to the
+            // buildings as the user zooms in
+            'fill-extrusion-height': [
+                "interpolate", ["linear"], ["zoom"],
+                15, 0,
+                15.05, ["get", "height"]
+            ],
+            'fill-extrusion-base': [
+                "interpolate", ["linear"], ["zoom"],
+                15, 0,
+                15.05, ["get", "min_height"]
+            ],
+            'fill-extrusion-opacity': .6
+        }
+    }, labelLayerId);
 });
 </script>
- 
+
 </body>
 </html>
