--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
 var map = new mapboxgl.Map({
     style: 'mapbox://styles/mapbox/light-v10',
-    center: [-74.0066, 40.7135],
+    center: [39.826209, 21.422544],
     zoom: 15.5,
     pitch: 45,
     bearing: -17.6,
@@ -78,17 +78,7 @@ map.on('load', function() {
 "features": [{
 "type": "Feature",
 "properties": {
-"description": "<a class="trigger_popup_fricc">Click here to show the popup</a>
-
-<div class="hover_bkgr_fricc">
-    <span class="helper"></span>
-    <div>
-        <div class="popupCloseButton">X</div>
-        <p>Add any HTML content<br />inside the popup box!</p>
-    </div>
-</div>",
-"icon": "theatre"
-},
+"description": "<strong>Mad Men Season Five Finale Watch Party</strong><p>Head to Lounge 201 (201 Massachusetts Avenue NE) Sunday for a <a href=\"http://madmens5finale.eventbrite.com/\" target=\"_blank\" title=\"Opens in a new window\">Mad Men Season Five Finale Watch Party</a>, complete with 60s costume contest, Mad Men trivia, and retro food and drink. 8:00-11:00 p.m. $10 general admission, $20 admission and two hour open bar.</p>",
 "geometry": {
 "type": "Point",
 "coordinates": [-77.038659, 38.931567]
