--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ map.addLayer({
 "type": "Feature",
 "geometry": {
 "type": "Point",
-"coordinates": [21.42280, 39.82601]
+"coordinates": [39.82601,21.42280]
 }
 }]
 }
