--- a/index.html
+++ b/index.html
@@ -93,6 +93,33 @@ map.addLayer({
 });
 });
  
+    map.loadImage('https://img.icons8.com/color/240/000000/koran.png', function(error, image) {
+if (error) throw error;
+map.addImage('coran', image);
+map.addLayer({
+"id": "points",
+"type": "symbol",
+"source": {
+"type": "geojson",
+"data": {
+"type": "FeatureCollection",
+"features": [{
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [39.82602,21.42290]
+}
+}]
+}
+},
+"layout": {
+"icon-image": "coran",
+"icon-size": 0.25
+}
+});
+});
+    
+    
     map.addLayer({
         'id': '3d-buildings',
         'source': 'composite',
