--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ map.addLayer({
 });
     
  /*************************************/
+	var bounds = [-122.5336, 37.7049, -122.3122, 37.8398];
 	 map.addSource('mask', {
     "type": "geojson",
     "data": polyMask(mask, bounds)
