--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ map.addLayer({
                 15, 0,
                 15.05, ["get", "min_height"]
             ],
-            'fill-extrusion-opacity': .6
+            'fill-extrusion-opacity': 0
         }
     }, labelLayerId);
 });
