--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ map.addLayer({
 }
 });
 });
- 
+ //dsdqdqssdq//
     map.loadImage('https://firebasestorage.googleapis.com/v0/b/sirbmvp-249122.appspot.com/o/saleh.png?alt=media&token=4e614aac-d42d-46a1-a498-3e9c746d075f', function(error, image) {
 if (error) throw error;
 map.addImage('coran', image);
