--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ max-width: 200px;
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibW91bWVuZWIxIiwiYSI6ImNqeXJiNzltMTA4bGkzY251aGwzMTlhcWsifQ.u-VGRZVtwq1OBAl0K2Kfkg';
  
-var monument = [39.8841969,21.4188156];
+var monument = [39.827,21.421];
 var monument2 = [39.106,21.629];
 
 var map = new mapboxgl.Map({
 container: 'map',
-style: 'mapbox://styles/moumeneb1/ck0u42q9b17ou1cmophg718yv',
+style: 'mapbox://styles/moumeneb1/ck0z06ht80uyn1cpmrisiyd7f',
 center: monument,
 pitch: 45,
 bearing: -17.6,
